--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -73,7 +73,7 @@ p {
         padding: 5px;
         margin: 1px;
         color: black;
-        border-radious: 3px;
+        border-radius: 3px;
     }
 
 
