--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -32,8 +32,23 @@ padding-bottom: 10px;
     float: right;
 }
 
+
+.h1 {
+    margin-left: 90px;
+}
+
+.h1, p {
+    text-align: center;
+}
+
 .High Score {
-    float: left;
+    /* float: left; */
+    padding-left: 50 px;
+}
+
+.timer {
+    /* float: right; */
+    margin-right: 50 px;
 }
 
 .container {
