--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -19,6 +19,11 @@ p {
     line-height: 1.5;
 }
 
+.scores {
+    color: #563d7c;
+    text-decoration: none;
+    transition: color 0.1s;
+}
 /*start here*/
 
 .header {
@@ -28,8 +33,10 @@ padding-top: 10px;
 padding-bottom: 10px;
 }
 
-.timer{
-    float: right;
+.timer {
+    position: absolute;
+    top: 10px;
+    right: 10px;
 }
 
 
@@ -41,14 +48,9 @@ padding-bottom: 10px;
     text-align: center;
 }
 
-.High Score {
-    /* float: left; */
-    padding-left: 50 px;
-}
 
-.timer {
-    /* float: right; */
-    margin-right: 50 px;
+.start {
+    text-align: center;
 }
 
 .container {
