--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,9 +1,15 @@
-* {
+/* * {
     margin: 0;
     padding:0;
     box-sizing: border-box;
-    }
+    } */
 
+.allDone{
+    display:none;
+}
+.question_default_display{
+    display: none;
+}
 
 html {
     font-size: 20px;        
@@ -13,10 +19,15 @@ body {
     background-color: white;
     font-family: 'Open Sans', 'sans-serif';
 }
-
+.allFinal{
+    display: none;
+}
 p {
     font-size: 20px;
     line-height: 1.5;
+    display: flex;
+    margin-left: 25%;
+    margin-right: 25%;
 }
 
 .scores {
@@ -26,26 +37,27 @@ p {
 }
 /*start here*/
 
-.header {
+/* .header {
     background-color: purple;
     display: flex;
 padding-top: 10px;
 padding-bottom: 10px;
-}
+} */
+
+.Welcome {
+    margin-left: 25px;
+    }
 
 .timer {
     position: absolute;
     top: 10px;
     right: 10px;
+    margin-right: 25px;
 }
 
 
 .h1 {
     margin-left: 90px;
-}
-
-.h1, p {
-    text-align: center;
 }
 
 
@@ -61,71 +73,22 @@ padding-bottom: 10px;
     height: 100vh;
 }
 
-.quiz-box {
-    width: 600px;
-    background-color: grey;
-    color: black;
-    padding: 1rem 5rem 5rem 5rem;
-    border: 3 px solid var(--color-primary);
-    border-radius: 5px;
-    align-items: center;
-    display: center;
-    flex-direction: column;
-    justify-content: center;
-    margin-top: 200px;
-    margin-left: 300px;
+.start button {
+    /* margin: 1.5rem 0 4rem 0; */
+    margin: 5px 2px;
+    background-color: purple;
 }
 
-    .quiz-box h1 {
-        background-color: var(--color-primary);
-        font-size: 20px;
-        text-align:  center;
-        color: black;
-        padding: 20px;
-        width: 100%;
-        border-radius: 3px;
-    }
-
-    .quiz-header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    .quiz-header #progress {
-        color: black;
-        font-size: 15px;
-        font-weight: 700;
-    }
-
-    .quiz-header #count-down {
-        font-size: 15px;
-        font-weight: 700;
-        /* background-color: yellow; */
-        padding: 5px;
-        margin: 1px;
-        color: black;
-        border-radius: 3px;
-    }
-
-
-    .quiz-box #question {
-        font-size: 20px;
-        font-weight: 600;
-        color: black;
-        border: 1px solid black;
-        border-width: 1px 0;
-        padding: 5px 0;
-    }
-
-    .buttons {
-        margin: 1.5rem 0 4rem 0;
-    }
-
+.options{
+    margin: 5px 2px;
+}
     .btn {
-        text-align: left;
+        text-align: center;
         background-color: purple;
-        width: 100%;
+        width: 50%;
+        margin-left: 0px;
+        margin-right: 0px;
+        height: 50px;
         font-size: 15px;
         color: white;
         border: 1px solid violet;
@@ -133,6 +96,7 @@ padding-bottom: 10px;
         margin: 7px 0;
         padding: 10px;
         outline: none;
+        margin-bottom:10px;
     }
 
     .btn:hover {
@@ -141,7 +105,7 @@ padding-bottom: 10px;
         color: white;
     }
     .btn:active {
-        background-color: yellow;
+        background-color: PINK;
     }
 
     #score {
@@ -170,3 +134,4 @@ padding-bottom: 10px;
 .quiz-repeat a:hover {
     background-color:violet;
 }
+
